everything works now

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
 </head>
 <body>
-    
+    <div>
+        <h1></h1>
+    </div>
+    <div>
+        <button>hide the h1 element</button>
+        <button id="button2">unhide the h1 element</button>
+    </div>
 </body>
 </html>
